--- a/PatientApp/PatientApp/Settings/Base.lproj/Settings.storyboard
+++ b/PatientApp/PatientApp/Settings/Base.lproj/Settings.storyboard
@@ -251,6 +251,28 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="bz6-PQ-fbk">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bz6-PQ-fbk" id="CMo-Wk-yBM">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="iconLanguage" translatesAutoresizingMaskIntoConstraints="NO" id="wnI-x6-LUl">
+                                                    <rect key="frame" x="14" y="5" width="40" height="39"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Language" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14h-CR-fWT">
+                                                    <rect key="frame" x="67" y="16" width="134" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="14h-CR-fWT" firstAttribute="leading" secondItem="CMo-Wk-yBM" secondAttribute="leadingMargin" constant="59" id="A9o-6o-cBS"/>
+                                                <constraint firstItem="wnI-x6-LUl" firstAttribute="leading" secondItem="CMo-Wk-yBM" secondAttribute="leadingMargin" constant="6" id="aA3-d6-DiO"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -1034,6 +1056,7 @@
         <image name="iconContacts-25" width="25" height="25"/>
         <image name="iconHome-25" width="25" height="25"/>
         <image name="iconHospital-25" width="25" height="25"/>
+        <image name="iconLanguage" width="32" height="32"/>
         <image name="iconMetamorphose-25" width="25" height="25"/>
         <image name="iconPhone2-25" width="25" height="25"/>
         <image name="iconSkydrive-25" width="25" height="25"/>
